Issue: fix vertical-align between watch and vote button

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3579,6 +3579,7 @@ label.issue-item-row {
     display:inline-block;
     margin-left:.3em;
     font-size:@base-font-size;
+    vertical-align:middle;
 }
 .voter-list-wrap {
     display:inline-block;
